# mi-plaits-dsp-rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  _typos.toml
examples/: README.md  midi_control.rs
src/: envelope.rs  lib.rs  voice.rs
src/chords/: chord_bank.rs  mod.rs
src/downsampler/: mod.rs
src/drums/: analog_bass_drum.rs  analog_snare_drum.rs  hihat.rs  mod.rs  synthetic_bass_drum.rs  synthetic_snare_drum.rs
src/dsp/: envelope.rs  mod.rs  resources.rs  voice.rs
src/engine/: additive_engine.rs  bass_drum_engine.rs  chord_engine.rs  fm_engine.rs  grain_engine.rs  hihat_engine.rs  mod.rs  modal_engine.rs  noise_engine.rs  particle_engine.rs  snare_drum_engine.rs  speech_engine.rs  string_engine.rs  swarm_engine.rs  virtual_analog_engine.rs  waveshaping_engine.rs  wavetable_engine.rs
src/engine2/: arpeggiator.rs  chiptune_engine.rs  phase_distortion_engine.rs  six_op_engine.rs  string_machine_engine.rs  virtual_analog_vcf_engine.rs  wave_terrain_engine.rs
src/fm/: algorithms.rs  dx_units.rs  envelope.rs  lfo.rs  operator.rs  voice.rs
src/fx/: diffuser.rs  ensemble.rs  low_pass_gate.rs  mod.rs  overdrive.rs  sample_rate_reducer.rs
src/noise/: clocked_noise.rs  dust.rs  particle.rs  smooth_random_generator.rs
src/oscillator/: formant_oscillator.rs  grainlet_oscillator.rs  harmonic_oscillator.rs  mod.rs  nes_triangle_oscillator.rs  oscillator.rs  sine_oscillator.rs  (+7 more)
tests/: all_engines.rs  common.rs  drums.rs  fx.rs  modulation.rs  noise.rs  oscillators.rs  physical_modelling.rs  sample_rate_independence.rs  voice.rs  wav_writer.rs
(+148 files in other folders)
