[package]
name = "mi-plaits-dsp"
version = "0.1.0"
edition = "2021"
authors = ["Oliver Rockstedt <info@sourcebox.de>"]
description = "Port of DSP code from Mutable Instruments Plaits module"
repository = "https://github.com/sourcebox/mi-plaits-dsp-rs"
license = "MIT"
keywords = ["audio", "dsp", "synthesizer"]
categories = ["no-std", "multimedia::audio"]

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }

[dev-dependencies]
wav = "1.0"
log = "0.4"
simple_logger = "4.1"
audio-midi-shell = { git = "https://github.com/sourcebox/audio-midi-shell-rs" }
